# business-process-praktikum

./: .gitignore  README.md  alpha_miner_discovery_model.bpmn  inductive_discovery_model.bpmn  main.py  pyproject.toml  requirements.txt
models/: custom.bpmn  heuristics_miner_discovery_model.bpmn
src/: analysis.html  analysis.ipynb  metrics.py  process_model.ipynb
