[project]
name = "business-process-praktikum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pm4py>=2.7.18",
    "rustxes>=0.2.9",
    "seaborn>=0.13.2",
]
